@@ -168,6 +168,8 @@ SQLITE_LIBS = -lsqlite3
 STRIP = 
 USE_NLS = yes
 VERSION = 0.3.20100330
+X11_CFLAGS =  
+X11_LIBS = -lX11  
 XGETTEXT = /usr/bin/xgettext
 XGETTEXT_015 = /usr/bin/xgettext
 XGETTEXT_EXTRA_OPTIONS = 
